--- a/Pixond/appsettings.json
+++ b/Pixond/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "FilmLibraryConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=FilmLibrary"
+    "FilmLibraryConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Pixond"
   }
 }
