--- a/Pixond/appsettings.json
+++ b/Pixond/appsettings.json
@@ -9,5 +9,15 @@
   "AllowedHosts": "*",
   "Database": {
     "FilmLibraryConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Pixond"
+  },
+  "Encryption": {
+    "SecretString": "@f%bg:>6:Qw7!2>|bh7A!:O/.=!IkGAYwr,bd%/WV+FO#gKYbHn1Q0DQp`@N/<p"
+  },
+  "MailServer": {
+    "Host": "smtp.titan.email",
+    "Port": 587,
+    "FromEmail": "noreply@pixond.works",
+    "Username": "noreply@pixond.works",
+    "Password": "zPHsWN5B"
   }
 }
