added remote database server

--- a/Pixond/appsettings.json
+++ b/Pixond/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "FilmLibraryConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Pixond"
+    "PixondConnectinoString": "Server=tcp:pixondmedia.database.windows.net,1433;Initial Catalog=Pixond;Persist Security Info=False;User ID=pixond_admin;Password={G5T%eVZ&X;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Encryption": {
     "SecretString": "@f%bg:>6:Qw7!2>|bh7A!:O/.=!IkGAYwr,bd%/WV+FO#gKYbHn1Q0DQp`@N/<p"
